✅ Font 및 디자인 변경 사항 - Font : A2Z 폰트 추가 - HTML 불필요 태그 제거

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 @plugin '@tailwindcss/typography';
+
+@font-face {
+	font-family: 'A2Z-SemiBold';
+	src: url('/font/A2Z-6SemiBold.ttf') format('truetype');
+}
+@font-face {
+	font-family: 'A2Z-Bold';
+	src: url('/font/A2Z-7Bold.ttf') format('truetype');
+}
